--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = -I$(top_srcdir)/mapredo -fprofile-arcs -ftest-coverage
 
-AM_LDFLAGS = -lgtest -fprofile-arcs -lsnappy -ldl
+AM_LDFLAGS = -lgtest -fprofile-arcs -lsnappy -ldl -lpthread
 
 TESTS = gtest
 check_PROGRAMS = gtest
