Add stuff to .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *.spec
 test-driver
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+*.tar.gz
+missing
+m4
