Did some more cleanups in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,26 @@
+*~
 *.spec
+.deps
+.gdb_history
+.libs
+*.lo
+*.la
+*.o
 test-driver
 Makefile
 Makefile.in
-aclocal.m4
-autom4te.cache
-config.guess
-config.log
-config.status
-config.sub
-configure
-depcomp
-install-sh
-libtool
-ltmain.sh
-*.tar.gz
-missing
-m4
+/aclocal.m4
+/autom4te.cache
+/config.guess
+/config.log
+/config.status
+/config.sub
+/configure
+/depcomp
+/install-sh
+/libtool
+/ltmain.sh
+/*.tar.gz
+/missing
+/m4
+/frontend/mapredo
