--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
 *~
 *.spec
-.deps
-.gdb_history
-.libs
+*.gcda
+*.gcno
+*.log
+*.trs
 *.lo
 *.la
 *.o
+.deps
+.dirstamp
+.gdb_history
+.libs
+callgrind.out.*
 test-driver
 Makefile
 Makefile.in
 /aclocal.m4
 /autom4te.cache
+/compile
 /config.guess
 /config.log
 /config.status
@@ -24,3 +31,4 @@ Makefile.in
 /missing
 /m4
 /frontend/mapredo
+/test/gtest
