--- a/msvc/mapredo/mapredo.vcxproj
+++ b/msvc/mapredo/mapredo.vcxproj
@@ -49,6 +49,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(SNAPPY)\bin\snappy32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ModuleDefinitionFile>mapredo.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -65,6 +66,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>$(SNAPPY)\bin\snappy32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ModuleDefinitionFile>mapredo.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -94,6 +96,9 @@
     <ClInclude Include="..\..\mapredo\tmpfile_collector.h" />
     <ClInclude Include="..\..\mapredo\tmpfile_reader.h" />
     <ClInclude Include="..\..\mapredo\valuelist.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="mapredo.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
