--- a/msvc/mapredo/mapredo.vcxproj.filters
+++ b/msvc/mapredo/mapredo.vcxproj.filters
@@ -90,4 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="mapredo.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
