Ported from autotools to cmake.

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,4 @@
 *~
 *.spec
-*.gcda
-*.gcno
-*.log
-*.trs
-*.lo
-*.la
-*.o
-.deps
-.dirstamp
-.gdb_history
-.libs
-callgrind.out.*
-test-driver
-Makefile
-Makefile.in
-/aclocal.m4
-/autom4te.cache
-/compile
-/config.guess
-/config.log
-/config.status
-/config.sub
-/configure
-/depcomp
-/install-sh
-/libtool
-/ltmain.sh
-/*.tar.gz
-/missing
-/m4
-/frontend/mapredo
-/test/gtest
+/build
+pg100*
