--- a/mapredo.spec.in
+++ b/mapredo.spec.in
@@ -1,7 +1,7 @@
 %define RELEASE 1
 
-Name: @PACKAGE@
-Version: @VERSION@
+Name: @CMAKE_PROJECT_NAME@
+Version: @PACKAGE_VERSION@
 License: LGPL
 Vendor: Hextreme.com
 Group: Development/Libraries
@@ -12,7 +12,6 @@ URL: http://hextreme.com/mapredo
 BuildRoot: %(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 Packager: Kjell Irgens <mapredo@hextreme.com>
 BuildRequires: snappy-devel, tclap
-Requires(pre): shadow-utils
 
 %description
 %{name} is an embeddable map-reduce engine written in C++11.  It
