--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -1,6 +1,10 @@
 
+if (CMAKE_INSTALL_PREFIX STREQUAL /usr)
+  set(CMAKE_INSTALL_FULL_LOCALSTATEDIR /var)
+endif()
+
 add_definitions(-DPACKAGE_VERSION="${PACKAGE_VERSION}")
-add_definitions(-DTMPDIR="${CMAKE_INSTALL_SHAREDSTATEDIR}/mapredo")
+add_definitions(-DTMPDIR="${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/tmp/mapredo")
 
 add_executable (mapredo main.cpp)
 
