Now creates tmpdir.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -1,13 +1,22 @@
 
 if (CMAKE_INSTALL_PREFIX STREQUAL /usr)
-  set(CMAKE_INSTALL_FULL_LOCALSTATEDIR /var)
+  set (CMAKE_INSTALL_FULL_LOCALSTATEDIR /var)
 endif()
 
-add_definitions(-DPACKAGE_VERSION="${PACKAGE_VERSION}")
-add_definitions(-DTMPDIR="${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/tmp/mapredo")
+install (DIRECTORY DESTINATION
+  "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/tmp/mapredo"
+  DIRECTORY_PERMISSIONS
+  OWNER_WRITE OWNER_READ OWNER_EXECUTE
+  GROUP_WRITE GROUP_READ GROUP_EXECUTE
+  WORLD_READ WORLD_EXECUTE)
+
+message("X:${CMAKE_INSTALL_LOCALSTATEDIR}")
+
+add_definitions (-DPACKAGE_VERSION="${PACKAGE_VERSION}")
+add_definitions (-DTMPDIR="${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/tmp/mapredo")
 
 add_executable (mapredo main.cpp)
 
 target_link_libraries (mapredo lmapredo ${CMAKE_DL_LIBS})
 
-install(TARGETS mapredo DESTINATION bin)
+install (TARGETS mapredo DESTINATION bin)
