--- a/mapredo.spec.in
+++ b/mapredo.spec.in
@@ -1,13 +1,13 @@
 %define RELEASE 1
 
 Name: @CMAKE_PROJECT_NAME@
-Version: @PACKAGE_VERSION@
+Version: @PROJECT_VERSION@
 License: LGPL
 Vendor: Hextreme.com
 Group: Development/Libraries
 Summary: Map-reduce engine for small/medium data
 Release: %RELEASE
-Source: %{name}-%{version}.tar.gz
+Source: %{name}-%{version}.tar.bz2
 URL: http://hextreme.com/mapredo
 BuildRoot: %(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 Packager: Kjell Irgens <mapredo@hextreme.com>
