--- a/mapredo/CMakeLists.txt
+++ b/mapredo/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 add_library (lmapredo SHARED
   base.cpp
+  buffer_trader.cpp
+  consumer.cpp
   directory.cpp
   engine.cpp
   file_merger.cpp
@@ -18,3 +20,5 @@ set_target_properties(lmapredo
 target_link_libraries (lmapredo pthread snappy)
 
 install (TARGETS lmapredo DESTINATION ${CMAKE_INSTALL_LIBDIR})
+file (GLOB include_files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+install (FILES ${include_files} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mapredo)
