Added make check and some cleanups.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 2.8.5)
 
 project (mapredo)
+set(PROJECT_VERSION 0.3.0)
 
 if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release")
@@ -11,27 +12,22 @@ if (CMAKE_COMPILER_IS_GNUCXX)
     "${CMAKE_CXX_FLAGS} -g -pedantic -Wall -Wno-unused-result -std=c++11")
 endif()
 
-include_directories(BEFORE ${PROJECT_SOURCE_DIR})
+#message(${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_FLAGS})
 
-set(PROJECT_VERSION 0.2.0)
-set(ARCHIVE_NAME ${CMAKE_PROJECT_NAME}-${PROJECT_VERSION})
-add_custom_target(dist
+include_directories (BEFORE ${PROJECT_SOURCE_DIR})
+
+set (ARCHIVE_NAME ${CMAKE_PROJECT_NAME}-${PROJECT_VERSION})
+add_custom_target (dist
   COMMAND git archive --prefix=${ARCHIVE_NAME}/ HEAD
   | bzip2 > ${CMAKE_BINARY_DIR}/${ARCHIVE_NAME}.tar.bz2
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 
-set (CPACK_PACKAGE_VERSION_MAJOR 0)
-set (CPACK_PACKAGE_VERSION_MINOR 1)
-set (CPACK_PACKAGE_VERSION_PATCH 0)
-set (PACKAGE_VERSION
-  "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-  
-set (CPACK_GENERATOR "TBZ2")
-set (CPACK_SOURCE_GENERATOR "TBZ2")
-set (CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${PACKAGE_VERSION}")
-set (CPACK_SOURCE_IGNORE_FILES
-  "/build/;pg100;\\\\.git;\\\\.gitignore;~$;${CPACK_SOURCE_IGNORE_FILES}")
-include (CPack)
+#set (CPACK_GENERATOR "TBZ2")
+#set (CPACK_SOURCE_GENERATOR "TBZ2")
+#set (CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION}")
+#set (CPACK_SOURCE_IGNORE_FILES
+#  "/build/;pg100;\\\\.git;\\\\.gitignore;~$;${CPACK_SOURCE_IGNORE_FILES}")
+#include (CPack)
 
 include (GNUInstallDirs)
 
@@ -42,6 +38,7 @@ configure_file (
 enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
+add_custom_target(check COMMAND "tests/unittests")
 
 find_package(Doxygen)
 
