--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
 
 add_executable(unittests
   buffer_trader.cpp
-  test.cpp
+  data_reader.cpp
   plugin.cpp
+  test.cpp
   ../mapredo/directory.cpp)
 
 target_link_libraries(unittests
