--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,3 +1,5 @@
+include (GenerateExportHeader)  
+
 add_library (wordcount MODULE wordcount.cpp)
 set_target_properties(wordcount PROPERTIES PREFIX "")
 
