--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(unittests
   buffer_trader.cpp
   data_reader.cpp
+  merge_cache.cpp
   plugin.cpp
   test.cpp
   ../mapredo/directory.cpp)
