--- a/mapredo/CMakeLists.txt
+++ b/mapredo/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library (lmapredo SHARED
   consumer.cpp
   directory.cpp
   engine.cpp
+  merge_cache.cpp
   settings.cpp
   sorter_buffer.cpp
   sorter.cpp)
